--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jasmine-spec-reporter": "^7.0.0",
     "localtunnel": "^2.0.2",
     "minimist": "^1.2.5",
+    "ps-node": "^0.1.6",
     "q": "^1.5.1",
     "randomstring": "^1.2.1",
     "sauce-connect-launcher": "^1.3.2",
